<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<resources>
    <string name="app_name">PinGo</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Registration</string>
    <string name="register_action">Register</string>
    <string name="forget_password">Forgot Password</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_txt">Continue</string>
    <string name="protocal">Accept《Privacy Policy》 &amp;《Service  Agreement》</string>
    <string name="app_exit_tip">Press one more time to exit</string>
    <string name="map">Map</string>
    <string name="device_list">Devices</string>
    <string name="ele_fence">Geo-Fences</string>
    <string name="alert_list">Alarms</string>
    <string name="settings">Settings</string>
    <string name="map_location">Map</string>
    <string name="search_device">Search</string>
    <string name="search_cancel">Close</string>
    <string name="previous_device">Previous</string>
    <string name="next_device">Next</string>
    <string name="last_location">Last Online Time</string>
    <string name="warningList">@string/alert_list</string>
    <string name="pathHistory">Route History</string>
    <string name="deviceNavigation">Navigation</string>
    <string name="deviceDetail">Device Details</string>
    <string name="detail">Details</string>
    <string name="gotoMain">Try now</string>
    <string name="skip">Skip</string>
    <string name="receive_email_code">Please check your email and input the received verification code</string>
    <string name="email_code_error">Please input verification code</string>
    <string name="empty_username">Please input user name</string>
    <string name="empty_email">Please input email address</string>
    <string name="empty_pwd">Please input password</string>
    <string name="not_pwd_common">Password and confirm password do not match</string>
    <string name="dont_protocal">Please accept the &#060;Privacy Pollicy&#062; and &#060;Service Agreenment&#062;</string>
    <string name="switchLanguage">Language</string>
    <string name="switchMap">Map</string>
    <string name="switchTimeZone">Time Zone</string>
    <string name="switchDate">Date Format</string>
    <string name="aboutUs">About Us</string>
    <string name="modifyPwd">Password</string>
    <string name="view_protocal">Privacy Policy &amp; Service  Agreement</string>
    <string name="logout">Logout</string>
    <string name="cleanCache">Clean Memory</string>
    <string name="modifyUserName">Edit User Name</string>
    <string name="forget_pwd_send_email">Send Email</string>
    <string name="device_id">Device No.</string>
    <string name="device_name">Name</string>
    <string name="device_order_no">Order No.</string>
    <string name="add">@string/save</string>
    <string name="add_device">Add Device</string>
    <string name="modify_device_pic">Change Picture</string>
    <string name="scan_add_device">Scan QR code or barcode</string>
    <string name="brvah_loading">Loading………</string>
    <string name="brvah_load_failed">Loading failed, please click here to try again</string>
    <string name="brvah_load_end">No more data</string>
    <string name="one_hour">1 Hour</string>
    <string name="two_hour">2 Hours</string>
    <string name="six_hour">6 Hours</string>
    <string name="today">Today</string>
    <string name="other_day">Custom</string>
    <string name="scan">Scan QR code </string>
    <string name="click_light">Click to illuminate</string>
    <string name="authorization_is_prohibited">Unauthorized</string>
    <string name="qr_code_auto_scan_notification">Scan start by put the QR code in box</string>
    <string name="confirm">Confirm</string>
    <string name="gaodemap">Gouda Map</string>
    <string name="googlemap">Google Map</string>
    <string name="ddmmx">dd/mm/yyyy</string>
    <string name="mmddx">mm/dd/yyyy</string>
    <string name="yyyyx">yyyy/mm/dd</string>
    <string name="ddmmh">dd-mm-yyyy</string>
    <string name="mmddh">mm-dd-yyyy</string>
    <string name="update_pwd">Change Password</string>
    <string name="source_pwd">Current Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_update">Confirm Changes</string>
    <string name="empty_source_pwd">Please input current password</string>
    <string name="empty_new_pwd">Please input new password</string>
    <string name="empty_confirm_pwd">Please input confirm password</string>
    <string name="diff_new_confirm">New password and confirm password do not match</string>
    <string name="success_update_pwd">Change success</string>
    <string name="toast_device_id_empty">Please input device no.</string>
    <string name="toast_device_name_empty">Please input name</string>
    <string name="toast_device_orderno_empty">Please input order no.</string>
    <string name="geo_save">@string/save</string>
    <string name="entry">Entry</string>
    <string name="exit">Leave</string>
    <string name="repeast">Repeat</string>
    <string name="select_device">Select Device</string>
    <string name="geo_name">Name</string>
    <string name="add_geo">Add Geo-Fence</string>
    <string name="edit_geo">Edit Geo-Fence</string>
    <string name="geo_no_poi">Select the center of Geo-Fence</string>
    <string name="geo_no_repeat">Date cannot be blank</string>
    <string name="geo_no_device">Device cannot be blank</string>
    <string name="geo_no_name">Geo-Fence Name cannot be blank</string>
    <string name="geo_add_success">Add Success</string>
    <string name="geo_update_success">Change success</string>
    <string name="no_result">Sorry, no route found</string>
    <string name="error_network">Search fail, please check the network</string>
    <string name="error_key">Authentication key fail</string>
    <string name="error_other">Unknow error, plese try again later.  Error code: </string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="inactive">Inactive</string>
    <string name="network_error">Connection failed</string>
    <string name="reload_click">Click to Retry</string>
    <string name="no_data">No data</string>
    <string name="no_content">Temporary no data</string>
    <string name="detail_modify">Click to Edit</string>
    <string name="detail_name">Name:&#160;&#160;</string>
    <string name="detail_ower">Device Owner:&#160;&#160;</string>
    <string name="detail_expireddate">Expiry date:&#160;&#160;</string>
    <string name="detail_onlinedate">Online date:&#160;&#160;</string>
    <string name="detail_status">Status:&#160;&#160;</string>
    <string name="detail_phone_list">Phone book</string>
    <string name="detail_switch">Features</string>
    <string name="detail_sos_switch">SOS Alarm</string>
    <string name="detail_battery_switch">Low Battery Alarm</string>
    <string name="detail_tamper_switch">Tamper Alarm</string>
    <string name="detail_voc_switch">Voice Monitor</string>
    <string name="detail_share_list">Sharing list</string>
    <string name="detail_tamper_switch_submit">Start</string>
    <string name="select_local_pic">Select picture</string>
    <string name="modify_local_pic">Change picture</string>
    <string name="dialog_add_share">Add user to sharing list</string>
    <string name="dialog_add_share_hint">Add sharer email</string>
    <string name="dialog_hint">Tips</string>
    <string name="dialog_ok">Confirm</string>
    <string name="delete_device">Confirm to delete?</string>
    <string name="delete_fence">Delete the Geo-Fence?</string>
    <string name="dialog_sub_returnlist">Back</string>
    <string name="dialog_title_add_success">Add Success</string>
    <string name="dialog_title_add_failed">Add fail</string>
    <string name="dialog_title_del_success">Delete Success</string>
    <string name="dialog_title_del_failed">Delete fail</string>
    <string name="input_empty">Please fill in</string>
    <string name="dialog_add_phone_hint">Mobile Number</string>
    <string name="unshare">Remove</string>
    <string name="setowner">Change Owner</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="week">-</string>
    <string name="week1">Week</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="select_device_date">Select Date</string>
    <string name="logout_ok">Confirm to logout?</string>
    <string name="input_fence_name">Geo-Fence Name</string>
    <string name="phone">Tel</string>
    <string name="edit_phone">Edit phone book</string>
    <string name="send_success">Please check your email to reset your password</string>
    <string name="register_success">Registration Success</string>
    <string name="goto_login">Registration Now</string>
    <string name="select_time">Select time</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="start_than_end">Time range does not match</string>
    <string name="start_equal_end">Time range does not match</string>

    <string name="invalid_email">Email format is invalid</string>
    <string name="no_than_pwd">Password must be between 8 and 60 characters</string>
    <string name="no_than_n_pwd">New password must be between 8 and 60 characters</string>
    <string name="no_than_s_pwd">Current password must be between 8 and 60 characters</string>
    <string name="no_than_c_pwd">Confirm password must be between 8 and 60 characters</string>
    <string name="empty_cpwd">Please input confirm password</string>
    <string name="verification">Verification</string>
    <string name="verify">Verify</string>
    <string name="app_notice">Show Notice</string>
    <string name="save">Save</string>
    <string name="dialog_modify_device_name_title">Edit name</string>
    <string name="dialog_modify_device_name_hint">Name</string>
    <string name="change_ower">Confirm to change owner?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="no_location">Device does not have location data</string>
    <string name="no_devices">Does not have any device </string>

    <string name="unread_count">Unread:%s</string>
    <string name="map_no_ready">The map has not been initialized. Please try again later</string>
    <string name="jianti" translatable="false">简体中文</string>
    <string name="fanti" translatable="false">繁體中文</string>
    <string name="english" translatable="false">English</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="version" >Version: </string>
    <string name="cnotact_email" >Contact: </string>
    <string name="Monday_short">M</string>
    <string name="Tuesday_short">Tu</string>
    <string name="Wednesday_short">W</string>
    <string name="Thursday_short">Th</string>
    <string name="Friday_short">F</string>
    <string name="Saturday_short">Sa</string>
    <string name="Sunday_short">Su</string>
</resources>