<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:text="moth@qq.com"
            android:textSize="@dimen/font_12" />

        <EditText
            android:id="@+id/et_input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="12345678"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:textSize="@dimen/font_12" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="@color/color_222A37"
            android:textSize="@dimen/font_12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password" />

        <TextView
            android:id="@+id/tv_reigster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>


</RelativeLayout>