<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/dimen_20dp"
        android:layout_height="@dimen/dimen_10dp"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:background="@drawable/bg_triangle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_5_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/color_222A37" />

        <include layout="@layout/common_divider" />

        <TextView
            android:id="@+id/online"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:gravity="center"
            android:text="@string/online"
            android:textColor="@color/color_222A37" />

        <include layout="@layout/common_divider" />

        <TextView
            android:id="@+id/offline"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:gravity="center"
            android:text="@string/offline"
            android:textColor="@color/color_222A37" />

        <include layout="@layout/common_divider" />

        <TextView
            android:id="@+id/expired"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:gravity="center"
            android:text="@string/inactive"
            android:textColor="@color/color_222A37" />
    </LinearLayout>
</LinearLayout>